--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
   <!-- Hero Section -->
   <section id="hero" class="scroll-section">
-  <img src="your-photo.jpg" alt="Profile Photo" id="profilePic" />
+  <img src="/assets/images/my_img2.jpeg" alt="Profile Photo" id="profilePic" />
   <h2 id="typedText"></h2>
   <p>A passionate frontend learner and web enthusiast.</p>
-  <a href="PRADIP_Resumee.pdf" download class="resumeBtn">Download Resume</a>
+  <a href="/assets/documents/PRADIP_Resumee.pdf" download class="resumeBtn">Download Resume</a>
   <div id="socialLinks">
   <a href="https://github.com/yourusername" class="social github" target="_blank">
   <i class="fab fa-github"></i> GitHub
@@ -56,13 +56,40 @@ Today, I'm fully back on track — eyes on the stars, chasing growth with purpos
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="scroll-section">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Portfolio Website (Current)</h3>
-      <p>This is the site you're seeing right now. Built with HTML, CSS, and JS.</p>
+<section id="projects">
+  <h2>Projects</h2>
+  <div class="slider-wrapper centered">
+    <button class="slider-btn left" id="prevBtn">‹</button>
+
+    <div class="slider" id="slider">
+      <div class="project-card">
+        <img src="/assets/images/RJG_ss.jpg" alt="Joke Generator Screenshot" />
+        <h3>Joke Generator</h3>
+        <p>A simple random joke generator using JokeAPI.</p>
+        <a href="https://samael108.github.io/Random-Jokes-Generator/" class="project-btn">Live Demo</a>
+      </div>
+
+      <div class="project-card">
+        <img src="images/habit-tracker.png" alt="Habit Tracker Screenshot" />
+        <h3>Habit Tracker</h3>
+        <p>Track your daily habits. Fully responsive design.</p>
+        <a href="#" class="project-btn">Live Demo</a>
+      </div>
+      
+       <div class="project-card">
+        <img src="images/habit-tracker.png" alt="Portfolio website Screenshot" />
+        <h3>Portfolio Website</h3>
+        <p>Track your daily habits. Fully responsive design.</p>
+        <a href="https://samael108.github.io/my-portfolio/" class="project-btn">Live Demo</a>
+      </div>
+
+      <!-- Add more cards here -->
     </div>
-  </section>
+
+    <button class="slider-btn right" id="nextBtn">›</button>
+      <div class="dots" id="sliderDots"></div>
+  </div>
+</section>
 
   <!-- Contact Section -->
   <section id="contact" class="scroll-section">
