--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- Hero Section -->
   <section id="hero" class="scroll-section">
-  <img src="/assets/images/my_img2.jpeg" alt="Profile Photo" id="profilePic" />
+  <img src="assets/images/my_img2.jpeg" alt="Profile Photo" id="profilePic" />
   <h2 id="typedText"></h2>
   <p>A passionate frontend learner and web enthusiast.</p>
   <a href="/assets/documents/PRADIP_Resumee.pdf" download class="resumeBtn">Download Resume</a>
