--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Today, I'm fully back on track — eyes on the stars, chasing growth with purpos
 
     <div class="slider" id="slider">
       <div class="project-card">
-        <img src="/assets/images/RJG_ss.jpg" alt="Joke Generator Screenshot" />
+        <img src="assets/images/RJG_ss.jpg" alt="Joke Generator Screenshot" />
         <h3>Joke Generator</h3>
         <p>A simple random joke generator using JokeAPI.</p>
         <a href="https://samael108.github.io/Random-Jokes-Generator/" class="project-btn">Live Demo</a>
