--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <img src="assets/images/my_img2.jpeg" alt="Profile Photo" id="profilePic" />
   <h2 id="typedText"></h2>
   <p>A passionate frontend learner and web enthusiast.</p>
-  <a href="/assets/documents/PRADIP_Resumee.pdf" download class="resumeBtn">Download Resume</a>
+  <a href="assets/documents/PRADIP_Resumee.pdf" download class="resumeBtn">Download Resume</a>
   <div id="socialLinks">
   <a href="https://github.com/yourusername" class="social github" target="_blank">
   <i class="fab fa-github"></i> GitHub
@@ -77,9 +77,9 @@ Today, I'm fully back on track — eyes on the stars, chasing growth with purpos
       </div>
       
        <div class="project-card">
-        <img src="images/habit-tracker.png" alt="Portfolio website Screenshot" />
+        <img src="assets/images/portfolio_ss.jpg" alt="Portfolio website Screenshot" />
         <h3>Portfolio Website</h3>
-        <p>Track your daily habits. Fully responsive design.</p>
+        <p>✨ Personal Portfolio Website — Built using HTML, CSS, and JavaScript to showcase my projects, skills, and contact information.</p>
         <a href="https://samael108.github.io/my-portfolio/" class="project-btn">Live Demo</a>
       </div>
 
