--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
 
   <!-- Hero Section -->
   <section id="hero" class="scroll-section">
-  <img src="assets/images/my_img2.jpeg" alt="Profile Photo" id="profilePic" />
+  <img src="/assets/images/my_img2.jpeg" alt="Profile Photo" id="profilePic" />
   <h2 id="typedText"></h2>
   <p>A passionate frontend learner and web enthusiast.</p>
-  <a href="assets/document/PRADIP_Resumee.pdf" download class="resumeBtn">Download Resume</a>
+  <a href="/assets/documents/PRADIP_Resumee.pdf" download class="resumeBtn">Download Resume</a>
   <div id="socialLinks">
   <a href="https://github.com/yourusername" class="social github" target="_blank">
   <i class="fab fa-github"></i> GitHub
 </a>
   <a href="https://www.linkedin.com/in/pradip-kumar-das-655aa71ba/" target="_blank" class="social linkedin"><i class="fab fa-linkedin"></i> Linkedin</a>
-<!--  <a href="https://www.facebook.com/share/1RZZiZbhtj/" target="_blank" class="social facebook"> 
+<!-- <a href="https://www.facebook.com/share/1RZZiZbhtj/" target="_blank" class="social facebook"> 
 <i class="fab fa-facebook"></i> Facebook  
 </a>
-  <a href="https://twitter.com/yourusername" target="_blank" class="social twitter"><i class="fab fa-twitter"></i> Twitter</a>-->
+  <a href="https://twitter.com/yourusername" target="_blank" class="social twitter"><i class="fab fa-twitter"></i> Twitter</a> -->
   <a href="https://www.instagram.com/lit_thedark/profilecard/?igsh=MXR4c2x0MXA1ank2ZQ==" target="_blank" class="social instagram"><i class="fab fa-instagram"></i> Instagram</a>
- <!-- <a href="https://youtube.com/yourchannel" target="_blank" class="social youtube"><i class="fab fa-youtube"></i> YouTube</a>-->
+
 </div>
 </section>
 
@@ -54,16 +54,29 @@ Yet, I didn’t give up. I turned that low point into my launching pad.
 Outside academics, I’ve always stayed passionate — whether it’s strumming my guitar, becoming a carrom singles champion, or playing competitive cricket tournaments.
 Today, I'm fully back on track — eyes on the stars, chasing growth with purpose and passion. 🚀</p>
   </section>
+<!-- Tech stack -->
+<section id="tech-stack" class= "scroll-section">
+  <h2>Tech Stack</h2>
+  <div class="tech-icons">
+    <div><i class="fab fa-html5"></i><p>HTML5</p></div>
+    <div><i class="fab fa-css3-alt"></i><p>CSS3</p></div>
+    <div><i class="fab fa-js"></i><p>JavaScript</p></div>
+ <!--   <div><i class="fab fa-react"></i><p>React</p></div> -->
+    <div><i class="fab fa-github"></i><p>GitHub</p></div>
+    <div><i class="fab fa-java"></i><p>Java</p></div>
+    <!-- Add more icons as needed -->
+  </div>
+</section>
 
   <!-- Projects Section -->
-<section id="projects">
+<section id="projects" class= "scroll-section">
   <h2>Projects</h2>
   <div class="slider-wrapper centered">
     <button class="slider-btn left" id="prevBtn">‹</button>
 
     <div class="slider" id="slider">
       <div class="project-card">
-        <img src="assets/images/RJG_ss.jpg" alt="Joke Generator Screenshot" />
+        <img src="/assets/images/RJG_ss.jpg" alt="Joke Generator Screenshot" />
         <h3>Joke Generator</h3>
         <p>A simple random joke generator using JokeAPI.</p>
         <a href="https://samael108.github.io/Random-Jokes-Generator/" class="project-btn">Live Demo</a>
@@ -77,9 +90,9 @@ Today, I'm fully back on track — eyes on the stars, chasing growth with purpos
       </div>
       
        <div class="project-card">
-        <img src="assets/images/portfolio_ss.jpg" alt="Portfolio website Screenshot" />
+        <img src="images/habit-tracker.png" alt="Portfolio website Screenshot" />
         <h3>Portfolio Website</h3>
-        <p>✨ Personal Portfolio Website — Built using HTML, CSS, and JavaScript to showcase my projects, skills, and contact information.</p>
+        <p>Track your daily habits. Fully responsive design.</p>
         <a href="https://samael108.github.io/my-portfolio/" class="project-btn">Live Demo</a>
       </div>
 
