--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- Hero Section -->
   <section id="hero" class="scroll-section">
-  <img src="/assets/images/my_img2.jpeg" alt="Profile Photo" id="profilePic" />
+  <img src="assets/images/my_img2.jpeg" alt="Profile Photo" id="profilePic" />
   <h2 id="typedText"></h2>
   <p>A passionate frontend learner and web enthusiast.</p>
   <a href="/assets/documents/PRADIP_Resumee.pdf" download class="resumeBtn">Download Resume</a>
@@ -76,7 +76,7 @@ Today, I'm fully back on track — eyes on the stars, chasing growth with purpos
 
     <div class="slider" id="slider">
       <div class="project-card">
-        <img src="/assets/images/RJG_ss.jpg" alt="Joke Generator Screenshot" />
+        <img src="assets/images/RJG_ss.jpg" alt="Joke Generator Screenshot" />
         <h3>Joke Generator</h3>
         <p>A simple random joke generator using JokeAPI.</p>
         <a href="https://samael108.github.io/Random-Jokes-Generator/" class="project-btn">Live Demo</a>
@@ -90,7 +90,7 @@ Today, I'm fully back on track — eyes on the stars, chasing growth with purpos
       </div>
       
        <div class="project-card">
-        <img src="images/habit-tracker.png" alt="Portfolio website Screenshot" />
+        <img src="assets/images/RJG_ss.jpg" alt="Portfolio website Screenshot" />
         <h3>Portfolio Website</h3>
         <p>Track your daily habits. Fully responsive design.</p>
         <a href="https://samael108.github.io/my-portfolio/" class="project-btn">Live Demo</a>
