--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Today, I'm fully back on track — eyes on the stars, chasing growth with purpos
       </div>
       
        <div class="project-card">
-        <img src="assets/images/RJG_ss.jpg" alt="Portfolio website Screenshot" />
+        <img src="assets/images/portfolio_ss.jpg" alt="Portfolio website Screenshot" />
         <h3>Portfolio Website</h3>
         <p>Track your daily habits. Fully responsive design.</p>
         <a href="https://samael108.github.io/my-portfolio/" class="project-btn">Live Demo</a>
